# ansys-tools-omniverse

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTORS.md  LICENSE  README.md  README.rst  post_build_cleanup.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  nightly.yml
exts/ansys.geometry.service/ansys/geometry/service/: extension.py
exts/ansys.geometry.service/config/: extension.toml
exts/ansys.geometry.service/docs/: CHANGELOG.md  README.md  index.rst
exts/ansys.geometry.serviceui/ansys/geometry/serviceui/: extension.py
exts/ansys.geometry.serviceui/config/: extension.toml
exts/ansys.geometry.serviceui/docs/: README.md  index.rst
exts/ansys.tools.omniverse.core/ansys/tools/omniverse/core/: extension.py
exts/ansys.tools.omniverse.core/config/: extension.toml
exts/ansys.tools.omniverse.core/docs/: CHANGELOG.md  README.md
exts/ansys.tools.omniverse.dsgui/ansys/tools/omniverse/dsgui/: __init__.py  extension.py
exts/ansys.tools.omniverse.dsgui/config/: extension.toml
exts/ansys.tools.omniverse.dsgui/docs/: CHANGELOG.md
exts/ansys.tools.omniverse.service/ansys/tools/omniverse/service/: extension.py
exts/ansys.tools.omniverse.service/config/: extension.toml
exts/ansys.tools.omniverse.service/docs/: README.md  index.rst
exts/ansys.tools.omniverse.serviceui/ansys/tools/omniverse/serviceui/: extension.py
exts/ansys.tools.omniverse.serviceui/config/: extension.toml
exts/ansys.tools.omniverse.serviceui/docs/: README.md  index.rst
tests/: conftest.py  test_basic.py
