[build-system]
requires = ["setuptools >= 42.0.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 80
src_paths = ["doc", "exts"]

[tool.codespell]
ignore-words-list = "ro, te, pres"
quiet-level = 3
skip = "*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.svg"

[tool.isort]
profile = "black"
skip_gitignore = true
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
filter_files = true
src_paths = ["ansys", "doc", "tests", "exts"]

[tool.bandit]
level = "HIGH"
number = "3"
recursive = true
exclude = ["venv/*", "tests/*"]

[pydocstyle]
convention = "numpy"
